Fix table spacing.

--- a/content/styles/shared.scss
+++ b/content/styles/shared.scss
@@ -3,6 +3,9 @@ figure {
   img {
     width: 100%;
   }
+  table + table {
+    margin-top: 1em;
+  }
 }
 
 .todo {
